deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bharata-katha-app
  namespace: bharata-katha
  labels:
    app: bharata-katha-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bharata-katha-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bharata-katha-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: bharata-katha-app
        image: avisubir/bharata-katha-app:1.0.20
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 12
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
