statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bharata-katha-db
  namespace: bharata-katha
  labels:
    app: bharata-katha-db
spec:
  serviceName: "bharata-katha-db"
  replicas: 1
  selector:
    matchLabels:
      app: bharata-katha-db
  template:
    metadata:
      labels:
        app: bharata-katha-db
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
      - name: bharata-katha-db
        image: mysql:8.0.33
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "localhost"]
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "localhost"]
          initialDelaySeconds: 60
          periodSeconds: 20
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
